[package]
name = "rust_poker"
version = "0.1.6"
authors = ["kmurf1999 <kwmurph2@asu.edu>"]
repository = "https://github.com/kmurf1999/rust_poker"
description = "Rust poker library"
license = "MIT"
edition = "2018"

[workspace]
members = [
    "gen_eval_table",
    "hand_indexer"
]

[features]
# Option: enable hand_indexer
indexer = ["hand_indexer"]

[build-dependencies]
gen_eval_table = { path = "gen_eval_table" }

[dependencies]
lazy_static = "1.4.0"
bytepack = "0.4.1"
rand = { version = "0.7", features = ["small_rng"] }
crossbeam = "0.7.3"
hand_indexer = { path = "hand_indexer", optional = true }
