[package]
name = "rust_poker"
version = "0.1.8"
authors = ["kmurf1999 <kwmurph2@asu.edu>"]
repository = "https://github.com/kmurf1999/rust_poker"
description = "Rust poker library"
license = "MIT"
edition = "2018"
keywords = ["poker"]


[badges]
travis-ci = { repository = "kmurf1999/rust_poker" }

[workspace]
members = [
    "gen_eval_table",
    "hand_indexer",
    "read_write"
]

[features]
# Option: enable hand_indexer
indexer = ["hand_indexer"]

[build-dependencies]
gen_eval_table = { path = "gen_eval_table", version = "0.1.0" }

[dependencies]
read_write = { path = "read_write", version = "0.1.0" }
# rust-embed = { version = "5.6.0", features = ["interpolate-folder-path"] }
hand_indexer = { path = "hand_indexer", version = "0.1.0", optional = true }
lazy_static =  "1.4.0"
rand = { version = "0.7", features = ["small_rng"] }
crossbeam = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
