[package]
name = "rust_poker"
version = "0.1.14"
authors = ["kmurf1999 <kwmurph2@asu.edu>"]
repository = "https://github.com/kmurf1999/rust_poker"
description = "Rust poker library"
license = "MIT"
edition = "2018"
keywords = ["poker"]


[badges]
travis-ci = { repository = "kmurf1999/rust_poker" }

[workspace]
members = [
    "gen_eval_table",
    "hand_indexer",
    "read_write"
]

[features]
# Option: enable hand_indexer
indexer = ["hand_indexer"]

[build-dependencies]
gen_eval_table = { path = "gen_eval_table", version = "0.1.2" }

[dependencies]
read_write = { path = "read_write", version = "0.1.2" }
fastdivide = "0.2.0"
# rust-embed = { version = "5.6.0", features = ["interpolate-folder-path"] }
thiserror = "1.0.20"
hand_indexer = { path = "hand_indexer", version = "0.1.2", optional = true }
lazy_static =  "1.4.0"
rand = { version = "0.7", features = ["small_rng"] }
crossbeam = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
