[package]
name = "equity_calculator"
version = "0.1.0"
authors = ["ruffers9 <kwmurph2@asu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7", features = ["small_rng"] }
crossbeam = "0.7.3"
hand_evaluator = { path = "../hand_evaluator" }
common = { path = "../common" }
